<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>packet-generator</artifactId>
        <groupId>io.mosip.packet</groupId>
        <version>1.2.0.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>data-extractor-conversion</artifactId>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <apache.derby.version>10.13.1.1</apache.derby.version>
        <postgresql.version>42.2.2</postgresql.version>
        <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
        <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
        <maven.war.plugin.version>3.1.0</maven.war.plugin.version>
        <maven.jacoco.version>0.8.5</maven.jacoco.version>
        <spring.boot.version>2.0.2.RELEASE</spring.boot.version>
        <maven.compiler.version>3.8.0</maven.compiler.version>
    </properties>
    <dependencies>
        <!-- https://mvnrepository.com/artifact/com.github.jai-imageio/jai-imageio-core -->
        <dependency>
            <groupId>com.github.jai-imageio</groupId>
            <artifactId>jai-imageio-core</artifactId>
            <version>1.4.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.jai-imageio/jai-imageio-jpeg2000 -->
        <dependency>
            <groupId>com.github.jai-imageio</groupId>
            <artifactId>jai-imageio-jpeg2000</artifactId>
            <version>1.4.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.mhshams/jnbis -->
        <dependency>
            <groupId>com.github.mhshams</groupId>
            <artifactId>jnbis</artifactId>
            <version>2.1.2</version>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-ui</artifactId>
            <version>1.6.8</version>
        </dependency>
        <dependency>
            <groupId>com.auth0</groupId>
            <artifactId>java-jwt</artifactId>
             <version>3.19.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.mosip.kernel/kernel-biometrics-api -->
        <dependency>
            <groupId>io.mosip.kernel</groupId>
            <artifactId>kernel-biometrics-api</artifactId>
            <version>1.2.0.1-B1</version>
        </dependency>
        <!--  https://mvnrepository.com/artifact/io.mosip.commons/commons-packet-manager
         <dependency>
             <groupId>io.mosip.commons</groupId>
             <artifactId>commons-packet-manager</artifactId>
             <version>1.2.0.1-B1</version>
         </dependency>-->
        <!-- https://mvnrepository.com/artifact/io.mosip.kernel/kernel-core -->
        <dependency>
            <groupId>io.mosip.kernel</groupId>
            <artifactId>kernel-core</artifactId>
            <version>1.2.0.1-B1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.mosip.kernel/kernel-crypto-jce -->
        <dependency>
            <groupId>io.mosip.kernel</groupId>
            <artifactId>kernel-crypto-jce</artifactId>
            <version>1.1.5.3</version>
        </dependency>
        <dependency>
            <groupId>io.mosip.kernel</groupId>
            <artifactId>kernel-dataaccess-hibernate</artifactId>
            <version>1.2.0.1-B1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derby</artifactId>
            <version>${apache.derby.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derbytools</artifactId>
            <version>${apache.derby.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.mosip.kernel/kernel-idgenerator-rid -->
        <dependency>
            <groupId>io.mosip.kernel</groupId>
            <artifactId>kernel-idgenerator-rid</artifactId>
            <version>1.2.0.1-B1</version>
            <exclusions>
                <exclusion>
                    <groupId>io.mosip.kernel</groupId>
                    <artifactId>kernel-logger-logback</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
              <dependency>
                   <groupId>io.mosip.packet</groupId>
                   <artifactId>packet-creator</artifactId>
                   <version>1.2.0.1-SNAPSHOT</version>
               </dependency>
          <dependency>
             <groupId>io.mosip.packet</groupId>
             <artifactId>packet-uploader</artifactId>
             <version>1.2.0.1-SNAPSHOT</version>
         </dependency>
        <dependency>
            <groupId>io.mosip.packet</groupId>
            <artifactId>packet-core</artifactId>
            <version>1.2.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.mosip.packet</groupId>
            <artifactId>data-extractor-ref-impl</artifactId>
            <version>1.2.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.mosip.commons</groupId>
            <artifactId>commons-packet-manager</artifactId>
            <version>${commons-packet-manager.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-webflux</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.vertx</groupId>
                    <artifactId>vertx-web</artifactId>
                </exclusion>
                <!--                <exclusion>-->
                <!--                    <groupId>io.mosip.kernel</groupId>-->
                <!--                    <artifactId>kernel-auth-adapter</artifactId>-->
                <!--                </exclusion>-->
                <!--                <exclusion>-->
                <!--                    <groupId>io.mosip.kernel</groupId>-->
                <!--                    <artifactId>kernel-logger-logback</artifactId>-->
                <!--                </exclusion>-->
            </exclusions>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.9.1</version>
        </dependency>
    </dependencies>

    <build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${maven.surefire.plugin.version}</version>
            <configuration>
                <skipTests>${skipTests}</skipTests>
                <skip>false</skip>
                <argLine>
                    ${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --illegal-access=permit
                </argLine>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${maven.jacoco.version}</version>
            <executions>
                <execution>
                    <goals>
                        <goal>prepare-agent</goal>
                    </goals>
                </execution>
                <execution>
                    <id>report</id>
                    <phase>prepare-package</phase>
                    <goals>
                        <goal>report</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <version>${spring.boot.version}</version>
            <configuration>
                <executable>true</executable>
                <layout>ZIP</layout>
            </configuration>
            <executions>
                <execution>
                    <goals>
                        <goal>build-info</goal>
                        <goal>repackage</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <artifactId>maven-enforcer-plugin</artifactId>
            <version>1.0.1</version>
            <executions>
                <execution>
                    <id>only-junit-dep-is-used</id>
                    <goals>
                        <goal>enforce</goal>
                    </goals>
                    <configuration>
                        <rules>
                            <bannedDependencies>
                                <excludes>
                                    <exclude>io.mosip.kernel:kernel-parent</exclude>
                                </excludes>
                            </bannedDependencies>
                        </rules>
                    </configuration>
                </execution>
            </executions>
        </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>${maven.compiler.version}</version>
            <configuration>
                <source>${maven.compiler.source}</source>
                <target>${maven.compiler.target}</target>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>${maven.jar.plugin.version}</version>
            <configuration>
                <archive>
                    <manifest>
                        <addClasspath>true</addClasspath>
                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                    </manifest>
                    <manifestEntries>
                        <Project-Name>${project.name}</Project-Name>
                        <Project-Version>${project.version}</Project-Version>
                    </manifestEntries>
                </archive>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-war-plugin</artifactId>
            <version>${maven.war.plugin.version}</version>
            <configuration>
                <archive>
                    <manifest>
                        <addClasspath>true</addClasspath>
                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                    </manifest>
                    <manifestEntries>
                        <Project-Name>${project.name}</Project-Name>
                        <Project-Version>${project.version}</Project-Version>
                    </manifestEntries>
                </archive>
            </configuration>
        </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>2.2.1</version>
            <executions>
                <execution>
                    <id>attach-sources</id>
                    <goals>
                        <goal>jar-no-fork</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>


        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.5</version>
            <executions>
                <execution>
                    <id>sign-artifacts</id>
                    <phase>verify</phase>
                    <goals>
                        <goal>sign</goal>
                    </goals>
                    <configuration>
                        <gpgArguments>
                            <arg>--pinentry-mode</arg>
                            <arg>loopback</arg>
                        </gpgArguments>
                    </configuration>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>pl.project13.maven</groupId>
            <artifactId>git-commit-id-plugin</artifactId>
            <version>3.0.1</version>
            <executions>
                <execution>
                    <id>get-the-git-infos</id>
                    <goals>
                        <goal>revision</goal>
                    </goals>
                    <phase>validate</phase>
                </execution>
            </executions>
            <configuration>
                <generateGitPropertiesFile>true</generateGitPropertiesFile>
                <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
                <includeOnlyProperties>
                    <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
                    <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
                </includeOnlyProperties>
                <commitIdGenerationMode>full</commitIdGenerationMode>
                <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
                <!-- <format>json</format> -->
            </configuration>
        </plugin>
        <!--      <plugin>
                  <groupId>org.springframework.boot</groupId>
                  <artifactId>spring-boot-maven-plugin</artifactId>
                  <configuration>
                      <mainClass>io.mosip.packet.extractor.DataProcessApplication</mainClass>
                      <outputDirectory>${basedir}/target/build</outputDirectory>
                  </configuration>
                  <executions>
                      <execution>
                          <goals>
                              <goal>repackage</goal>
                          </goals>
                      </execution>
                  </executions>
              </plugin>
              <plugin>
                  <artifactId>maven-resources-plugin</artifactId>
                  <version>3.3.0</version>
                  <executions>
                      <execution>
                          <id>copy-resources</id>
                          <phase>validate</phase>
                          <goals>
                              <goal>copy-resources</goal>
                          </goals>
                          <configuration>
                              <outputDirectory>${basedir}/target/build</outputDirectory>
                              <resources>
                                  <resource>
                                      <directory>src/main/resources/externalsamples</directory>
                                      <excludes>
                                          <exclude>registration-processor-camel-routes-migrator-default.xml</exclude>
                                      </excludes>
                                      <filtering>false</filtering>
                                  </resource>
                                  <resource>
                                      <directory>target</directory>
                                      <includes>
                                          <include>data-extractor-conversion-1.2.0.1-SNAPSHOT.jar</include>
                                      </includes>
                                      <filtering>true</filtering>
                                  </resource>
                              </resources>
                          </configuration>
                      </execution>
                  </executions>
              </plugin>
              <plugin>
                  <artifactId>maven-resources-plugin</artifactId>
                  <version>3.3.0</version>
                  <executions>
                      <execution>
                          <id>copy-resources-1</id>
                          <phase>validate</phase>
                          <goals>
                              <goal>copy-resources</goal>
                          </goals>
                          <configuration>
                              <outputDirectory>${basedir}/target/build/mockmds</outputDirectory>
                              <resources>
                                  <resource>
                                      <directory>src/main/resources/mockmds</directory>
                                      <filtering>false</filtering>
                                  </resource>
                              </resources>
                          </configuration>
                      </execution>
                  </executions>
              </plugin> -->
    </plugins>
    </build>
 </project>
